# bookstore-tabletop-cafe

./: .aiexclude  .gitignore  GEMINI.md  README.md  TODO.md  docker-compose.yml  pyproject.toml
.agents/rules/: fastapi.md
.gemini/code-reviewer/: SKILL.md
.gemini/code-teacher/: SKILL.md
app/: dependencies.py  main.py
app/core/: settings.py
app/db/: database.py
app/exceptions/: Game.py
app/integrations/: open_library.py
app/models/: book.py  game.py  user.py
app/routers/: auth.py  game.py
app/schemas/: auth.py  book.py  game.py
app/services/: auth.py  auth_service.py  game_service.py
migrations/: env.py
migrations/versions/: 10e37c310ecc_update_users_password_column_name.py  1172a22b3dda_add_is_admin_to_users.py  11e9851fa223_create_users_table.py  2da7b360164c_update_users_table.py  cb81bcd6bd8b_create_games_table.py
tests/: test_game.py
