[project]
name = "bookstore-tabletop-cafe"
version = "0.1.0"
description = "A bookstore/tabletop cafe backend system built with Python FastAPI, SQLAlchemy and PostgreSQL."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4", # migrations library
    "fastapi[standard]>=0.136.1", # backend framework
    "psycopg[binary]>=3.3.4",
    "pytest>=9.0.3", # test library
    "sqlalchemy>=2.0.49", # ORM library
]
