[project]
name = "bookstore-tabletop-cafe"
version = "0.1.0"
description = "A bookstore/tabletop cafe backend system built with Python FastAPI, SQLAlchemy and PostgreSQL."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4", # Migrations library
    "fastapi[standard]>=0.136.1", # Backend framework
    "psycopg[binary]>=3.3.4", # PostgreSQL database adapter
    "pwdlib>=0.3.0", # Password hashing library
    "pyjwt>=2.12.1", # JWT library
    "pytest>=9.0.3", # Test library
    "sqlalchemy>=2.0.49", # ORM library
]

[dependency-groups]
dev = [
    "ruff>=0.15.13",
]
